force-app/main/default/objects/UCPM_Post_Consent__e/UCPM_Post_Consent__e.object-meta.xml
<CustomObject>
    <description>This is used to post consents of participants and delegates to UCPM, imported via bulk import functionality of RH.</description>
    <label>UCPM Post Consent</label>
    <pluralLabel>UCPM Post Consents</pluralLabel>
</CustomObject>