force-app/main/default/objects/UCPM_Post_Consent__e/fields/Participant_Enrollment_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment_Record_Ids__c</fullName>
    <description>Field stores the participant enrollments record ids.</description>
    <label>Participant Enrollment Record Ids</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>