force-app/main/default/objects/UCPM_Post_Consent__e/fields/Patient_Delegate_Enrollment_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Patient_Delegate_Enrollment_Record_Ids__c</fullName>
    <label>Patient Delegate Enrollment Record Ids</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>