force-app/main/default/objects/UCPM_Post_Consent__e/fields/Place_of_Funcitionality__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Funcitionality__c</fullName>
    <description>This field is used to store the place of functionality from where the bulk import is being done.</description>
    <label>Place of Funcitionality</label>
    <length>200</length>
    <type>Text</type>
</CustomField>